# software

./: .gitignore  Final2x使用说明.md  PROJECT_OVERVIEW.md  adjustment.html  alpha-weekly-report.md  comparison.html  index.html  package-lock.json  package.json  report.html  upload.html  任务.md  前后端技术.md  项目周报.md  项目设计.md
UI设计/: adjustment.html  comparison.html  index.html  report.html  upload.html
relaize/: README.md
relaize/backend/: .env.example  README.md  pyproject.toml  requirements.txt
relaize/backend/app/: db.py  main.py
relaize/backend/app/api/: dependencies.py
relaize/backend/app/api/routes/: __init__.py  catalog.py  health.py  reports.py  tasks.py  uploads.py
relaize/backend/app/core/: config.py
relaize/backend/app/models/: catalog.py  task.py
relaize/backend/app/schemas/: catalog.py  reports.py  tasks.py  uploads.py
relaize/backend/app/scripts/: migrate_redis_to_mysql.py
relaize/backend/app/services/: face_restoration.py  final2x_engine.py  model_wrappers.py  pipeline_runner.py  processor.py  redis_client.py  registry.py  reports.py  tasks.py
relaize/backend/app/workers/: processor.py
relaize/frontend/: README.md  package-lock.json  package.json  tailwind.config.cjs
relaize/frontend/src/: index.css  main.tsx  router.tsx
relaize/frontend/src/components/cards/: QuickActionCard.tsx
relaize/frontend/src/layouts/: AppLayout.tsx
relaize/frontend/src/lib/: api.ts  download.ts
relaize/frontend/src/pages/: AdjustmentPage.tsx  AutoEnhancePage.tsx  ComparisonPage.tsx  DashboardPage.tsx  ReportPage.tsx  UploadPage.tsx
relaize/frontend/src/store/: adjustmentStore.ts
relaize/frontend/src/types/: catalog.ts  report.ts  tasks.ts  upload.ts
(+5 files in other folders)
