[project]
name = 'underwater-restore-backend'
version = '0.1.0'
description = 'FastAPI service for the 图像修复智能系统'
authors = [
  { name = 'Codex', email = 'dev@example.com' }
]
requires-python = '>=3.10'
dependencies = [
  'fastapi>=0.111.0,<1.0.0',
  'uvicorn[standard]>=0.30.0,<1.0.0',
  'python-multipart>=0.0.9',
  'pydantic-settings>=2.3.0',
  'aiofiles>=23.2.1',
  'redis>=5.0.0',
  'celery>=5.3.6',
  'httpx>=0.27.0',
  'python-dotenv>=1.0.0',
  'pillow>=10.4.0',
  'opencv-python-headless>=4.10.0.84',
  'numpy>=1.26.0',
  'Final2x-core>=4.0.0',
  'cccv==0.0.4',
  'einops>=0.8.0',
  'loguru>=0.7.0',
  'torch>=2.0.0',
  'torchvision>=0.15.0',
]

[project.optional-dependencies]
dev = [
  'pytest>=8.1.0',
  'pytest-asyncio>=0.23.0'
]

[build-system]
requires = ['setuptools>=65.0']
build-backend = 'setuptools.build_meta'
